[package]
name = "minios"
version = "0.1.0"
edition = "2021"
description = "Mini Object Storage - A simple object storage service with flat namespace"

[dependencies]
# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Timestamp handling
chrono = "0.4"

# Serialization for IPC messages
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"

# Logging
log = "0.4"
env_logger = "0.11"

# LRU cache
lru = "0.12"

# Signal handling (Ctrl+C)
ctrlc = "3"

# C library bindings for shared memory and process control
libc = "0.2"
